--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -189,8 +189,10 @@
     </div>
 </div>
 
-<!-- webjar -->
-<script th:src="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
+<footer>
+    <div th:replace="fragments/fragment :: footer"></div>
+</footer>
+
+<div th:replace="fragments/fragment :: scriptsAndJs"></div>
 </body>
 </html>
