--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -163,8 +163,10 @@
     });
 </script>
 
-<!-- webjar -->
-<script th:src="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+<footer>
+    <div th:replace="fragments/fragment :: footer"></div>
+</footer>
+
+<div th:replace="fragments/fragment :: scriptsAndJs"></div>
 </body>
 </html>
