--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -45,6 +45,21 @@
             border-radius: 5px;
         }
 
+        .edit-button {
+            background-color: #fa0;
+            border: none;
+            color: #fff;
+            font-weight: bold;
+            padding: 10px 20px;
+            border-radius: 5px;
+            width: 100%;
+            cursor: pointer;
+        }
+
+        .edit-button:hover {
+            background-color: #e69500;
+        }
+
         .alert {
             padding: 5px 10px;
             border-radius: 5px;
@@ -118,7 +133,7 @@
                 </p>
 
                 <p>
-                    <button type="submit">更新</button>
+                    <button type="submit" class="edit-button">更新</button>
                 </p>
             </div>
         </form>
@@ -156,8 +171,10 @@
     });
 </script>
 
-<!-- webjar -->
-<script th:src="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+<footer>
+    <div th:replace="fragments/fragment :: footer"></div>
+</footer>
+
+<div th:replace="fragments/fragment :: scriptsAndJs"></div>
 </body>
 </html>
