--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,7 +71,9 @@
       pw.type = pw.type === "password" ? "text" : "password";
     }
 </script>
-
+<footer>
+    <div th:replace="fragments/fragment :: footer"></div>
+</footer>
 <script th:src="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
 </body>
