--- a/src/main/resources/templates/reservation/edit.html
+++ b/src/main/resources/templates/reservation/edit.html
@@ -27,7 +27,7 @@
             <p class="mb-0" th:each="err : ${errorMessages}" th:text="${err}"></p>
         </div>
 
-        <form th:action="@{/reservation/update/{id}(id=${formModel.id})}"
+        <form id="reservationEditForm" th:action="@{/reservation/update/{id}(id=${formModel.id})}"
               th:object="${formModel}" th:method="post" novalidate>
             <input type="hidden" name="_method" value="put"/>
             <input type="hidden" th:field="*{restaurantId}">
@@ -64,9 +64,26 @@
 
             <!-- ボタン -->
             <div class="button-area text-center">
-                <button type="submit">予約を変更する</button>
+                <button type="button" id="confirmButton">予約を変更する</button>
             </div>
         </form>
+    </div>
+    <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmModalLabel">予約変更確認</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="閉じる"></button>
+                </div>
+                <div class="modal-body">
+                    予約を変更しますか？
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-warning text-white" id="modalSubmitBtn">予約を変更する</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <!-- WebJarスクリプト -->
