--- a/src/main/resources/templates/search-result.html
+++ b/src/main/resources/templates/search-result.html
@@ -7,7 +7,7 @@
 
     <style>
         body {
-            background-color: #f8f7f2;
+            background-color: #eeece4;
             font-family: "Hiragino Kaku Gothic ProN", "メイリオ", sans-serif;
         }
 
