--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>ログイン画面</title>
-    <style>
-        body.bg-light {
-          background-color: #eeece4 !important;
-        }
-    </style>
     <link th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <script th:src="@{/js/main.js}"></script>
+    <style>
+        .card {
+    border-radius: 10px; /* 角を10px丸くする */
+    }
+    </style>
 </head>
-<body class="bg-light">
+<body>
 
-<header class="bg-white border-bottom">
-    <nav aria-label="breadcrumb" role="navigation" class="container py-3">
-        <ol class="breadcrumb mb-0">
+<header>
+    <div th:replace="fragments/navbar :: navbar"></div>
+    <!--パンくずリスト-->
+    <nav aria-label="breadcrumb" role="navigation" class="nya-breadcrumb">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item"><a th:href="@{/}">ホーム</a></li>
             <li class="breadcrumb-item active" aria-current="page">ログイン画面</li>
         </ol>
     </nav>
 </header>
 
-<div class="container d-flex flex-column align-items-center justify-content-center min-vh-100">
+<div class="container d-flex flex-column align-items-center">
     <div class="card shadow-sm p-4 w-100" style="max-width: 420px;">
         <h4 class="text-center mb-4 fw-bold">ログイン</h4>
 
@@ -65,6 +67,11 @@
     </div>
 </div>
 
+<footer>
+    <div th:replace="fragments/fragment :: footer"></div>
+</footer>
+
+<div th:replace="fragments/fragment :: scriptsAndJs"></div>
 <script>
     function togglePassword() {
       const pw = document.getElementById("password");
@@ -72,7 +79,5 @@
     }
 </script>
 
-<script th:src="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
