--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -11,8 +11,8 @@
 <header>
     <div th:replace="fragments/navbar :: navbar"></div>
     <!--パンくずリスト-->
-    <nav aria-label="breadcrumb" role="navigation">
-        <ol class="breadcrumb p-3 bg-light rounded-2">
+    <nav aria-label="breadcrumb" role="navigation" class="nya-breadcrumb">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item"><a th:href="@{/}">ホーム</a></li>
             <li class="breadcrumb-item"><a th:href="@{/mypage}">マイページ</a></li>
             <li class="breadcrumb-item active" aria-current="page">予約履歴</li>
@@ -121,8 +121,10 @@
         </div>
     </div>
 </div>
+<footer>
+    <div th:replace="fragments/fragment :: footer"></div>
+</footer>
 
-<script th:src="@{/webjars/jquery/3.3.1/js/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
+<div th:replace="fragments/fragment :: scriptsAndJs"></div>
 </body>
 </html>
