--- a/src/main/resources/templates/restaurant-detail.html
+++ b/src/main/resources/templates/restaurant-detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <!-- Bootstrap CSS -->
     <link th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <title th:text="${restaurant.name} + 'の店舗詳細'">店舗詳細</title>
     <style>
         body {
@@ -76,6 +77,7 @@
                 width: 120px;
             }
         }
+
     </style>
 </head>
 <body>
@@ -84,8 +86,8 @@
     <div th:replace="fragments/navbar :: navbar"></div>
 
     <!--パンくずリスト-->
-    <nav aria-label="breadcrumb" role="navigation">
-        <ol class="breadcrumb p-3 bg-light rounded-2">
+    <nav aria-label="breadcrumb" role="navigation" class="nya-breadcrumb">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item"><a th:href="@{/}">ホーム</a></li>
             <li class="breadcrumb-item"><a th:href="@{/search(area=${area}, genre=${genre}, headcount=${headcount})}">検索結果</a></li>
             <li class="breadcrumb-item active" aria-current="page">店舗詳細</li>
