--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -5,7 +5,7 @@
     <title>サイト管理者画面</title>
 </head>
 <body>
-<header class="admin-header">
+<header>
     <div th:replace="fragments/navbar :: navbar"></div>
     <!--パンくずリスト-->
     <nav aria-label="breadcrumb" role="navigation" class="nya-breadcrumb">
