--- a/src/main/resources/templates/admin/user/index.html
+++ b/src/main/resources/templates/admin/user/index.html
@@ -9,8 +9,8 @@
 <header>
     <div th:replace="fragments/navbar :: navbar"></div>
     <!--パンくずリスト-->
-    <nav aria-label="breadcrumb" role="navigation">
-        <ol class="breadcrumb p-3 bg-light rounded-2">
+    <nav aria-label="breadcrumb" role="navigation" class="nya-breadcrumb">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item"><a th:href="@{/}">ホーム</a></li>
             <li class="breadcrumb-item"><a th:href="@{/admin}">サイト管理者画面</a></li>
             <li class="breadcrumb-item active" aria-current="page">サイト会員一覧</li>
