--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -15,14 +15,14 @@
         </ol>
     </nav>
 </header>
-<main>
+<main class="admin-main">
     <div class="admin-sidebar">
         <div class="list-group">
             <a th:href="@{/admin/user-list}" class="list-group-item list-group-item-action">サイト会員一覧</a>
             <a th:href="@{/admin/restaurant-list}" class="list-group-item list-group-item-action">店舗一覧</a>
         </div>
     </div>
-    <div class="admin-main">
+    <div class="admin-container">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="card bg-light admin-card">
