--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -18,6 +18,9 @@
         </ol>
     </nav>
 </header>
+<main>
+
+</main>
 <!--左側サイドバー -->
 <div class="sidebar">
     <div class="user-info text-center mb-4 border-bottom pb-3">
