--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -178,28 +178,18 @@ a.text-primary:hover {
 }
 
 /* サイト管理者画面 */
-.admin-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1030;
+.admin-main {
+    display: flex;
+    flex-wrap: nowrap; /* 折り返さない */
+    min-height: 100vh;
 }
 
-.admin-main {
-     margin-left: 230px;
-     padding: 220px 20px 20px 20px;
+.admin-container {
+    padding: 20px 20px 20px 80px;
 }
 
 .admin-sidebar {
-     height: 20vh;
-     width: 230px;
-     position: fixed;
-     top: 220px;
-     left: 0;
-     background-color: #fff;
-     padding-top: 20px;
-     z-index: 1000;
+    width: 200px;
 }
 
 .admin-restaurant-card {
