--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -119,7 +119,7 @@ a.text-primary:hover {
 
 /* 左メニュー */
 .sidebar {
-  height: 75vh;
+  height: 60vh;
   width: 250px;
   position: absolute;
   top: 187px;
@@ -127,6 +127,9 @@ a.text-primary:hover {
   background-color: #ffffff;
   color: #000;
   padding-top: 20px;
+  border: 1px solid #ddd; /* ← 枠線を追加 */
+  border-radius: 8px;     /* ← 角を少し丸める（任意） */
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05); /* ← 軽い影を追加（任意） */
 }
 
 .sidebar a {
