--- a/src/main/resources/templates/admin/restaurant/index.html
+++ b/src/main/resources/templates/admin/restaurant/index.html
@@ -17,7 +17,7 @@
     </nav>
 </header>
 <main>
-    <div class="container pt-3 pb-4 bg-white">
+    <div class="container pt-3 pb-4 mb-3 bg-white">
         <div class="row justify-content-center">
             <div class="col-xxl-9 col-xl-10 col-lg-11 text-center">
                 <div th:if="${errorMessage != null}" th:text="${errorMessage}"></div>
