--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
@@ -50,7 +49,15 @@
         </ul>
     </div>
 
-    <a th:href="@{/history}" class="btn-sidebar mt-3 d-block text-center">過去の予約履歴</a>
+    <a th:href="@{/history}" class="text-decoration-none small text-dark d-block mt-3">
+        ← 過去の予約履歴を見る
+    </a>
+    <form th:action="@{/withdraw/{id}(id=${loginUser.id})}" method="post"
+          onsubmit="return confirm('本当に退会しますか？');" class="mt-3">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        <button type="submit" class="btn-sidebar"
+                style="background-color: #d9534f;">退会する</button>
+    </form>
 </div>
 
 <!-- 右側メインエリア -->
